--- a/.gitattributes
+++ b/.gitattributes
@@ -12,3 +12,4 @@ Assets/Plugins/Android/libs/x86/libsccore.so filter=lfs diff=lfs merge=lfs -text
 *.mtl filter=lfs diff=lfs merge=lfs -text
 *.unity filter=lfs diff=lfs merge=lfs -text
 *.blend filter=lfs diff=lfs merge=lfs -text
+*.zip filter=lfs diff=lfs merge=lfs -text
